--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
 	<style>
 		body {
-					background-image: url("https://www10.lunapic.com/do-not-link-here-use-hosting-instead/160964667348893094?8168170");
+					background-image: url("https://pro2-bar-s3-cdn-cf3.myportfolio.com/6bfc6c12086363ac6b5a4d84b24d2ef6/eac324b8-03a6-4802-80b5-cc4755a15b95_rw_1920.jpg?h=963b6a8dde27a8aa257eaa72f100d321");
 					margin: 0;
 					padding: 0;
 					background-position: center;
