--- a/index.html
+++ b/index.html
@@ -128,7 +128,29 @@
 					<a href="https://discord.gg/slatt"><b> type racer bot </b><br> ez type race <br><br>
 					<a href="https://discord.gg/slatt"><b> zoom code scraper </b><br> scrapes zoom codes <br><br>
 					<a href="https://discord.gg/slatt"><b> Twitch bot </b><br> free twich follows <br><br>
-                </div> 
+                			<a href="https://discord.gg/slatt"><b> Norn VPN accounts </b><br> Used for VPNs <br><br>
+					<a href="https://discord.gg/slatt"><b> FortniteAimbotESP Cracked </b><br> Fn hacks <br><br>
+					<a href="https://discord.gg/slatt"><b> Gift Card Generator </b><br> Self explanatory <br><br>
+					<a href="https://discord.gg/slatt"><b> Instagram Social Tool </b><br> IG tool <br><br>
+					<a href="https://discord.gg/slatt"><b> Jarvee Full Cracked </b><br> Jarvee cracked <br><br>
+					<a href="https://discord.gg/slatt"><b> Joker Combo Leecher </b><br> Combo leecher <br><br>
+					<a href="https://discord.gg/slatt"><b> Keyword Generator </b><br> Self explanatory <br><br>
+					<a href="https://discord.gg/slatt"><b> Keyword Scraper </b><br> Keyword Scraper <br><br>
+					<a href="https://discord.gg/slatt"><b> KPortScan 3.0 </b><br> Port scanner <br><br>
+					<a href="https://discord.gg/slatt"><b> Malwarebytes </b><br> Malwarebytes cracked <br><br>
+					<a href="https://discord.gg/slatt"><b> MD5 Hash Decoder </b><br> MD5 Hash Decoder <br><br>
+					<a href="https://discord.gg/slatt"><b> Minecraft Generator </b><br> Minecraft Generator <br><br>
+					<a href="https://discord.gg/slatt"><b> Money Robot Crack </b><br> Money Robot Crack <br><br>
+					<a href="https://discord.gg/slatt"><b> Netflix GC Generator </b><br> Netflix GC Generator <br><br>
+					<a href="https://discord.gg/slatt"><b> NinjaGram </b><br> Some good shit <br><br>
+					<a href="https://discord.gg/slatt"><b> Pastebin Leecher </b><br> Leeches pastebin for certain keywords <br><br>
+					<a href="https://discord.gg/slatt"><b> PSC PIN GENERATOR </b><br> PSC PIN GENERATOR <br><br>
+					<a href="https://discord.gg/slatt"><b> CyberAIO Cracked </b><br> Cracked AIO checker <br><br>
+					<a href="https://discord.gg/slatt"><b> Dox Tool V3 Cracked </b><br> some cracked dox program <br><br>
+					<a href="https://discord.gg/slatt"><b> Dupe Remover </b><br> Self explanatory <br><br>
+					<a href="https://discord.gg/slatt"><b> EmailPass To Userpass </b><br> EmailPass To Userpass <br><br>
+
+		</div> 
             </div>
         </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
