--- a/index.html
+++ b/index.html
@@ -149,7 +149,23 @@
 					<a href="https://discord.gg/slatt"><b> Dox Tool V3 Cracked </b><br> some cracked dox program <br><br>
 					<a href="https://discord.gg/slatt"><b> Dupe Remover </b><br> Self explanatory <br><br>
 					<a href="https://discord.gg/slatt"><b> EmailPass To Userpass </b><br> EmailPass To Userpass <br><br>
-
+					<a href="https://discord.gg/slatt"><b> Amazon & Dicord Gen </b><br> Amazon & Dicord Gen <br><br>
+					<a href="https://discord.gg/slatt"><b> Stolen Nitro Discord Code Generator </b><br> Stolen Nitro Discord Code Generator <br><br>
+					<a href="https://discord.gg/slatt"><b> Steam Account Generator </b><br> Steam Account Generator <br><br>
+					<a href="https://discord.gg/slatt"><b> Uplay Account Generator </b><br> Uplay Account Generator <br><br>
+					<a href="https://discord.gg/slatt"><b> Steam Keys Parser </b><br> Steam Keys Parser <br><br>
+					<a href="https://discord.gg/slatt"><b> Combo Converter </b><br> Self explanatory <br><br>
+					<a href="https://discord.gg/slatt"><b> Split Combos </b><br> Split Combos <br><br>
+					<a href="https://discord.gg/slatt"><b> OpenBullet COLLECTION </b><br> OpenBullet COLLECTION <br><br>
+					<a href="https://discord.gg/slatt"><b> BlackBullet COLLECTION </b><br> BlackBullet COLLECTION <br><br>
+					<a href="https://discord.gg/slatt"><b> Proxy Tools and Grabbers </b><br> Proxy Tools and Grabbers <br><br>
+					<a href="https://discord.gg/slatt"><b> SEO Tools & Utilities </b><br> SEO Tools & Utilities <br><br>
+					<a href="https://discord.gg/slatt"><b> Youtube - Twitch - Social TOOLS </b><br> Youtube - Twitch - Social TOOLS <br><br>
+					<a href="https://discord.gg/slatt"><b> Bots - Traffic - Automatic Tools </b><br> Bots - Traffic - Automatic Tools <br><br>
+					<a href="https://discord.gg/slatt"><b> Crypto Bots - Utilities </b><br> Crypto Bots - Utilities <br><br>
+					<a href="https://discord.gg/slatt"><b> Hacking Software </b><br> Hacking Software <br><br>
+					<a href="https://discord.gg/slatt"><b> Keyloggers PACK </b><br> Keyloggers PACK <br><br>
+					<a href="https://discord.gg/slatt"><b> BASIC UTILITIES TOOLS </b><br> BASIC UTILITIES TOOLS <br><br>
 		</div> 
             </div>
         </div>
