--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
 					<a href="https://discord.gg/slatt"><b> Hacking Software </b><br> Hacking Software <br><br>
 					<a href="https://discord.gg/slatt"><b> Keyloggers PACK </b><br> Keyloggers PACK <br><br>
 					<a href="https://discord.gg/slatt"><b> BASIC UTILITIES TOOLS </b><br> BASIC UTILITIES TOOLS <br><br>
+					<h1 class="rainbow-text">OVER 1K MORE BOOSTERPERKS</h1>
+					
 		</div> 
             </div>
         </div>
